Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19916

Crash when opening dhcpd.conf.5

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 4.6.0-rc1
    • Qt Creator 4.5.1, Qt Creator 4.7.0-beta1
    • Editors
    • None
    • a0cb9919f32d8efa26fe3d3c13b8427859049dcc

      1) SaveĀ https://github.com/mirroring/dhcp/blob/v4_3/server/dhcpd.conf.5
      2) Open this file in Creator (by dragging to the editor or via the file menu)
      3) Qt Creator crashes

      Backtrace: https://gist.github.com/roycyt/6b571c6583ff4af40940ee3fdbf0af4c

      Thread 1 "qtcreator" received signal SIGSEGV, Segmentation fault.
      0x0000000000000018 in ?? ()
      (gdb) bt
      #0 0x0000000000000018 in ?? ()
      #1 0x00007fffe2f08ff7 in TextEditor::Internal::Rule::progressFinished (this=0x27cca90) at ../../../../qt-creator/src/plugins/texteditor/generichighlighter/rule.cpp:184
      #2 0x00007fffe2f0c19c in TextEditor::Internal::ProgressData::~ProgressData (this=0x2816200, __in_chrg=<optimized out>)
      at ../../../../qt-creator/src/plugins/texteditor/generichighlighter/progressdata.cpp:44
      #3 0x00007fffe2f12d61 in TextEditor::Highlighter::highlightBlock (this=0x2139920, text=...)
      at ../../../../qt-creator/src/plugins/texteditor/generichighlighter/highlighter.cpp:231
      #4 0x00007fffe2efe0e0 in TextEditor::SyntaxHighlighterPrivate::reformatBlock (this=0x21380f0, block=..., from=0, charsRemoved=0, charsAdded=130562)
      at ../../../../qt-creator/src/plugins/texteditor/syntaxhighlighter.cpp:219
      #5 0x00007fffe2efdf64 in TextEditor::SyntaxHighlighterPrivate::reformatBlocks (this=0x21380f0, from=0, charsRemoved=0, charsAdded=130562)
      at ../../../../qt-creator/src/plugins/texteditor/syntaxhighlighter.cpp:198
      #6 0x00007fffe2f004f6 in TextEditor::SyntaxHighlighterPrivate::rehighlight (this=0x21380f0, cursor=..., operation=QTextCursor::End)
      at ../../../../qt-creator/src/plugins/texteditor/syntaxhighlighter.cpp:63

        For Gerrit Dashboard: QTCREATORBUG-19916
        # Subject Branch Project Status CR V

            davschul David Schulz
            roycyt Roy Chen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes