Highlighter: fix crash after context change

Context changes might delete rules. Make sure to not dereference
these deleted rules by:
- save needed rule information before context change
- untrack every rule in ProgressData that was deleted

Task-number: QTCREATORBUG-19916
Change-Id: Icdbb739c1030bf918dbbe6c3a540a7c8893ce5a9
Reviewed-by: Christian Stenger <christian.stenger@qt.io>